monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata: 
  annotations: 
    prometheus.io/scrape: "true"
  name: prometheus-service
  namespace: monitoring
  labels:
    name: prometheus
spec:
  selector: 
    app: prometheus-server 
  ports: 
    - name: prometheus 
      port: 8080
      targetPort: prometheus
  type: LoadBalancer
