monitoring/prometheus/monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.set.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.set.local
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 8080
  - host: alertmanager.set.local
    http: 
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
